// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionBrowser component > enters search mode, filters sessions, and renders match snippets 1`] = `
" Chat Sessions (1 total, filtered)                                              sorted by date desc

 Search: query (Esc to cancel)

   Index │ Msgs │ Age  │ Match
 ❯ #1    │ 1    │ 10mo │ You:    Query is here a… (+1 more)
 ▼"
`;

exports[`SessionBrowser component > renders a list of sessions and marks current session as disabled 1`] = `
" Chat Sessions (2 total)                                                        sorted by date desc
 Navigate: ↑/↓   Resume: Enter   Search: /   Rename: n   Delete: x   Quit: q
 Sort: s         Reverse: r      First/Last: g/G

   Index │ Msgs │ Age  │ Name
 ❯ #1    │ 5    │ 10mo │ test-session-abcde (current)
   #2    │ 2    │ 10mo │ test-session-abcde
 ▼

 Selected: test-session-abcde
 Project: /tmp/project-root
 Started: 11/1/2025, 8:00:00 AM
 Updated: 1/1/2025, 6:30:00 AM"
`;

exports[`SessionBrowser component > shows an error state when loading sessions fails 1`] = `
" Error: storage failure
 Press q to exit"
`;

exports[`SessionBrowser component > shows empty state when no sessions exist 1`] = `
" No auto-saved conversations found.
 Press q to exit"
`;
